force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <label>Issue</label>
    <nameField>
        <displayFormat>I-{000}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>