force-app/main/default/objects/Issue__c/fields/Analysis_Description__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Description__c</fullName>
    <label>Analysis Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>