force-app/main/default/objects/Issue__c/fields/Estimated_Effort_Person_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_Person_Days__c</fullName>
    <label>Estimated Effort (Person Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>