force-app/main/default/objects/Issue__c/fields/Go_Ahead_for_development_received_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Ahead_for_development_received_Date__c</fullName>
    <label>Go-Ahead for development received Date</label>
    <type>Date</type>
</CustomField>