force-app/main/default/objects/Issue__c/fields/Go_ahead_for_production_received_date__c.field-meta.xml
<CustomField>
    <fullName>Go_ahead_for_production_received_date__c</fullName>
    <label>Go ahead for production received date</label>
    <type>Date</type>
</CustomField>