force-app/main/default/objects/Issue__c/fields/Last_Updated_Date_TIme__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date_TIme__c</fullName>
    <label>Last Updated Date &amp; TIme</label>
    <type>DateTime</type>
</CustomField>