force-app/main/default/objects/Issue__c/fields/Last_Updated_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Description__c</fullName>
    <label>Last Updated Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>