force-app/main/default/objects/Issue__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neha</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>