force-app/main/default/objects/Issue__c/validationRules/Priority_L1L2.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_L1L2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Prioritized_Date__c ),
OR (
ISPICKVAL(Priority__c, &quot;L1&quot;),
ISPICKVAL(Priority__c, &quot;L2&quot;)
)
)</errorConditionFormula>
    <errorMessage>Please enter value here</errorMessage>
</ValidationRule>