force-app/main/default/objects/Issue__c/validationRules/Status_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>(
ISPICKVAL(Status__c, &apos;Closed&apos;) &amp;&amp;
ISBLANK( Closed_Date__c )
)</errorConditionFormula>
    <errorMessage>Please enter value here</errorMessage>
</ValidationRule>