force-app/main/default/objects/Issue__c/validationRules/Status_GoaheadDev.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_GoaheadDev</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Go-ahead start of dev&apos;),
ISBLANK( Go_Ahead_for_development_received_Date__c )
)</errorConditionFormula>
    <errorMessage>Please enter value here</errorMessage>
</ValidationRule>