force-app/main/default/objects/Issue__c/validationRules/Status_GoaheadProduction.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_GoaheadProduction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Go-ahead migration to prod&apos;),
ISBLANK( Go_ahead_for_production_received_date__c )
)</errorConditionFormula>
    <errorMessage>Please enter value here</errorMessage>
</ValidationRule>