force-app/main/default/objects/Issue__c/validationRules/Status_ReOpen.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_ReOpen</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;ReOpen&apos;),
ISBLANK( ReOpen_Date__c )
)</errorConditionFormula>
    <errorMessage>Please enter value here</errorMessage>
</ValidationRule>