force-app/main/default/objects/Issue__c/validationRules/Status_UAT.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_UAT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;UAT&apos;),
ISBLANK( UAT_Date__c )
)</errorConditionFormula>
    <errorMessage>Please enter value here</errorMessage>
</ValidationRule>