force-app/main/default/objects/Issue__c/validationRules/Under_Development.validationRule-meta.xml
<ValidationRule>
    <fullName>Under_Development</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Under Development&apos;),
ISBLANK( Development_Start_Date__c )
)</errorConditionFormula>
    <errorMessage>Please enter value here</errorMessage>
</ValidationRule>